<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Weathy</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">London</string>

    <!-- Key name for storing location status in SharedPreferences -->
    <string name="pref_location_status_key" translatable="false">loc-status</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key" translatable="false">temperature_units</string>
    <string name="pref_units_default" translatable="false">@string/pref_units_value_metric</string>

    <string name="pref_units_entry_metric">Metric</string>
    <string name="pref_units_entry_imperial">Imperial</string>

    <string name="pref_units_value_metric" translatable="false">metric</string>
    <string name="pref_units_value_imperial" translatable="false">imperial</string>
    <string name="action_view_on_map">View on map</string>

    <array name="pref_units_entries">
        <item>@string/pref_units_entry_metric</item>
        <item>@string/pref_units_entry_imperial</item>
    </array>

    <array name="pref_units_entry_values">
        <item>@string/pref_units_value_metric</item>
        <item>@string/pref_units_value_imperial</item>
    </array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="location_description">Preferred location</string>

    <string name="sync_account_type">weathy.yonko.com</string>
    <string name="content_authority">com.yonko.weathy.app</string>
    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather information Available</string>
    <string name="empty_forecast_list_no_network">No Weather information Available. The network is not available to fetch the weather data.</string>
    <string name="empty_forecast_list_server_down">No Weather information Available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No Weather information Available. The server is not returning valid data.</string>
    <string name="empty_forecast_list_invalid_location">No Weather information Available. The location in settings is not recognized by the weather server.</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
</resources>
