<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
    android:contentDescription="@string/location_description"
    android:defaultValue="@string/pref_location_default"
    android:inputType="text"
    android:key="@string/pref_location_key"
    android:singleLine="true"
    android:title="@string/pref_location_label" />

  <ListPreference
    android:defaultValue="@string/pref_units_default"
    android:entries="@array/pref_units_entries"
    android:entryValues="@array/pref_units_entry_values"
    android:key="@string/pref_units_key"
    android:title="@string/pref_units_label" />

  <CheckBoxPreference
    android:defaultValue="@string/pref_enable_notifications_default"
    android:key="@string/pref_enable_notifications_key"
    android:summaryOff="@string/pref_enable_notifications_false"
    android:summaryOn="@string/pref_enable_notifications_true"
    android:title="@string/pref_enable_notifications_label" />
</PreferenceScreen>
